[package]
name = "typemaster"
version = "0.2.3"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]
edition = "2018"
license = "MIT"
description = "A typetrainer-game that helps to increase your speed in typewriting"
homepage = "https://github.com/geri1701/typemaster"
repository = "https://github.com/geri1701/typemaster"
readme = "README.md"
keywords = ["terminal", "tui", "input"]
categories = ["terminal"]

[dependencies]
console_engine = "2.6"
figleter = "0.2.2"
rand = "0.9.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
